# Bank-Management-System

./: CMakeLists.txt
backend/src/: server.js
backend/src/routes/: branchRoutes.js
backend/src/services/: branchService.js  cppExecutor.js
include/account/: AddAccountHolder.h  DisplayAccountHolder.h  RemoveAccountHolder.h  SearchAccountHolder.h  UpdateAccountHolder.h
include/branch/: AddBranch.h  DisplayBranch.h  RemoveBranch.h  SearchBranch.h
include/model/: AccountHolder.h  Branch.h
include/utils/: JSONHandler.h
main/: main.cpp
src/account/: AddAccountHolder.cpp  SearchAccountHolder.cpp  UpdateAccountHolder.cpp
src/branch/: AddBranch.cpp  DisplayBranch.cpp  RemoveBranch.cpp
src/model/: AccountHolder.cpp  Branch.cpp
src/utils/: JSONHandler.cpp
tests/account/: AddAccountHolderTest.cpp  DisplayAccountHolderTest.cpp  RemoveAccountHolderTest.cpp
tests/branch/: SearchBranchTest.cpp
